<resources>
    <string name="app_name">DoQu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_ask">What is title?</string>
    <string name="details_ask">Write details...</string>
    <string name="share_question">Share Question</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="comment_ask">Write comment.</string>
    <string name="delete_all_questions">DELETE ALL QUESTIONS </string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="password_match">Passwords must be matched!</string>
    <string name="password_valid">Password must be valid!</string>
    <string name="username_valid">Username must be valid!</string>
    <string name="name_valid">Name must be valid!</string>
    <string name="fail_create_account">Fail to create account! Try again</string>
    <string name="wrong_entry">Wrong username or password</string>
    <string name="deleted_questions">You deleted all questions successfully!</string>
    <string name="went_wrong">Something went wrong!</string>
    <string name="question_not_created">Question could not created!</string>
    <string name="question_created">Question successfully created!</string>
    <string name="password_rule1">• At least 1 capital letter.</string>
    <string name="password_rule2">• At least 1 number.</string>
    <string name="password_rule3">• At least 1 small character.</string>
    <string name="password_rule4">• Length must be at least 8.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close naivgation drawer</string>


</resources>