<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8090A6"
    tools:context=".ShareQuestionPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="100dp"
                android:background="#BAC8D9"
                android:hint="@string/title_ask"
                android:maxLength="36"
                android:padding="8dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="12dp"
                android:background="#BAC8D9"
                android:gravity="top|left"
                android:hint="@string/details_ask"
                android:maxLength="500"
                android:padding="8dp"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:text="@string/share_question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>