<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8090A6"
    android:gravity="center"
    tools:context=".Main.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="196dp"
                    android:layout_height="196dp"
                    android:layout_marginBottom="48dp"
                    android:src="@drawable/doqu" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:textColorHint="#FFFFFF"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rounded_corners"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="#FFFFFF"
                    android:textStyle="italic" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="128dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/rounded_corners_grey"
                    android:padding="12dp"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/rounded_corners_grey"
                    android:padding="12dp"
                    android:text="@string/sign_up" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>